Fix text truncation

--- a/src/components/Text/text.module.scss
+++ b/src/components/Text/text.module.scss
@@ -1,3 +1,5 @@
 .text {
   font-family: "OpenSans", sans-serif !important;
+  display: -webkit-box;
+  overflow: hidden;
 }
